--- a/info.html
+++ b/info.html
@@ -9,10 +9,11 @@ body,td,th {
 	font-family: "Century Gothic";
 	color: #000;
 	font-size: 16px;
+	vertical-align:text-top;
 }
 ul,li {line-height: 1; margin-top:0; margin-bottom:0}
 body {
-	background-color: #FFFFFF;
+	background-color:#E8E8E8;
 }
 .menu66 {
 	font-size: 16px;cursor: pointer;
@@ -22,16 +23,21 @@ body {
 }
 a:link {
 	color: #600;
+	text-decoration: none;
 }
 a:visited {
 	color: #603;
+	text-decoration: none;
 }
 a:hover {
 	color: #06F;
+	text-decoration: none;
 }
 a:active {
 	color: #999;
+	text-decoration: none;
 }
+.icon{box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.22);}
 .strokeme
 {
     color: white;
@@ -52,71 +58,71 @@ a:active {
 
 <body>
 <div align="center">
-  <table width="600" border="0" cellspacing="2" cellpadding="2">
+  <table width="808" border="0" cellspacing="2" cellpadding="2">
     <tr>
-      <td width="248"><div align="center"><img src="envelope.jpg" width="32" height="18" /></div></td>
-      <td width="144"><div align="center"><a href="https://www.youtube.com/user/mikeywinsor" target="_new"><img src="youtube-icon.png" width="24" height="24" /></a></div></td>
-      <td width="128"><div align="center"><a href="https://www.instagram.com/mikeywinsor/" target="_new"><img src="instagram-icon.png" width="29" height="29" /></a></div></td>
+      <td width="248"><div align="center"><img src="icon-email.png" width="60" height="60" class="icon" /></div></td>
+      <td width="144"><div align="center"><img src="icon-youtube.png" width="60" height="60" class="icon"/></div></td>
+      <td width="128"><div align="center"><a href="https://www.instagram.com/mikeywinsor/" target="_new"><img src="icon-instagram.png" width="60" height="60" class="icon" /></a></div></td>
+      <td width="128"><div align="center"><a href="https://www.instagram.com/mikeywinsor/" target="_new"><img src="icon-patreon.png" width="60" height="60" class="icon" /></a></div></td>
+      <td width="128"><div align="center"><a href="https://www.twitch.tv/mikeywinsor/" target="_new"><img src="icon-twitch.png" width="60" height="60" class="icon" /></a></div></td>
     </tr>
     <tr>
-      <td><div align="center">info (@) mikeywinsor . C0M</div></td>
-      <td><div align="center"><a href="https://www.youtube.com/user/mikeywinsor" target="_new">Youtube</a></div></td>
-      <td><div align="center"><a href="https://www.instagram.com/mikeywinsor/" target="_new">Instagram</a></div></td>
+      <td><div align="center">info (@) mikeywinsor . com</div></td>
+      <td><div align="center"><font size="-1"><a href="https://www.youtube.com/user/mikeywinsor" target="_new">youtube</a></font></div></td>
+      <td><div align="center"><font size="-1"><a href="https://www.instagram.com/mikeywinsor/" target="_new">instagram</a></font></div></td>
+      <td><div align="center"><font size="-1"><a href="https://www.instagram.com/mikeywinsor/" target="_new">patreon</a></font></div></td>
+      <td><div align="center"><font size="-1"><a href="https://www.instagram.com/mikeywinsor/" target="_new">twitch</a></font></div></td>
     </tr>
   </table>
-  <p>&nbsp;</p>
+  <br />
+<br />
 </div>
 <div align="center">
-  <table width="851" height="290" border="0">
+  <table width="851" height="376" border="0" cellspacing="4">
     <tbody>
       <tr>
-        <td height="50">Education:
+        <td height="23">Education:
         </td>
-        <td>Select Shows:</td>
+        <td>Select Shows and Awards:</td>
       </tr>
       <tr>
-        <td>2012 MFA University of Pennsylvania</td>
+        <td width="420" rowspan="12"><p>2012 MFA University of Pennsylvania<br />
+        2009 BA Georgia Southern University       </p></td>
+        <td>Jonathan LeVine Delusion Art Competition<br />
+          People's Choice Finalist, 2018</td>
+      </tr>
+      <tr>
         <td>Shape Shifting Liveliness, 2017 (solo)</td>
       </tr>
       <tr>
-        <td width="420">2009 BA Georgia Southern University</td>
         <td>Antioch Art at the Mall, 2016</td>
       </tr>
       <tr>
-        <td width="420">&nbsp;</td>
         <td>Continuum, 2012</td>
       </tr>
       <tr>
-        <td> </td>
         <td width="421"> Upenn MFA Thesis Exhibit, 2012</td>
       </tr>
       <tr>
-        <td> </td>
         <td>Liquid on Pane, 2011 (solo, catalogue)</td>
       </tr>
       <tr>
-        <td> </td>
         <td>Call It, 2011</td>
       </tr>
       <tr>
-        <td> </td>
         <td>Dreaming in Pursuit of Memory, 2010</td>
       </tr>
       <tr>
-        <td> </td>
         <td>Exit Show, 2010</td>
       </tr>
       <tr>
-        <td> </td>
         <td>Yomitobi: Paintings, 2009</td>
       </tr>
       <tr>
-        <td height="18">&nbsp;</td>
-        <td>Going Somewhere, 2007</td>
+        <td height="18">Going Somewhere, 2007</td>
       </tr>
       <tr>
-        <td height="18"> </td>
-        <td>Small Faces, Up-close, 2006</td>
+        <td height="18">Small Faces, Up-close, 2006</td>
       </tr>
     </tbody>
   </table>
