--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ h1 {color:#FFF;}
 }
 </style>
 <script type="text/javascript">
-if (typeof window.orientation !== 'undefined') {window.location.href = "mobile.html";}
+//if (typeof window.orientation !== 'undefined') {window.location.href = "mobile.html";}
 </script>
 <script type="text/javascript" src="js.js">
 </script>
