--- a/info.html
+++ b/info.html
@@ -86,43 +86,59 @@ a:active {
         <td>Select Shows and Awards:</td>
       </tr>
       <tr>
-        <td width="420" rowspan="12"><p>2012 MFA University of Pennsylvania<br />
+        <td width="420" rowspan="13"><p>2012 MFA University of Pennsylvania<br />
         2009 BA Georgia Southern University       </p></td>
+        <td>Birds, Bees, Flowers, and Trees<br />          
+        2019, RAAC, Richmond, KY<br /></td>
+      </tr>
+      <tr>
         <td>Jonathan LeVine Delusion Art Competition<br />
-          People's Choice Finalist, 2018</td>
+          2018, People's Choice Finalist</td>
       </tr>
       <tr>
-        <td>Shape Shifting Liveliness, 2017 (solo)</td>
+        <td>Shape Shifting Liveliness, (solo)<br />          
+          2017, The Center for the Arts, Murfreesboro, TN<br /></td>
       </tr>
       <tr>
-        <td>Antioch Art at the Mall, 2016</td>
+        <td>Antioch Art at the Mall <br />
+          2016,          
+        Nashville, TN</td>
       </tr>
       <tr>
-        <td>Continuum, 2012</td>
+        <td>Continuum<br />          
+          2012, The CAT, Statesboro, GA<br /></td>
       </tr>
       <tr>
-        <td width="421"> Upenn MFA Thesis Exhibit, 2012</td>
+        <td width="421"> Upenn MFA Thesis Exhibit<br />          
+          2012, The Crane, Philadelphia, PA<br /></td>
       </tr>
       <tr>
-        <td>Liquid on Pane, 2011 (solo, catalogue)</td>
+        <td>Liquid on Pane, (solo, catalogue)<br />          
+          2011, The Physical Lab, Philadelphia, PA<br /></td>
       </tr>
       <tr>
-        <td>Call It, 2011</td>
+        <td>Call It<br />          
+        2011, Charles Addams Gallery, Philadelphia, PA</td>
       </tr>
       <tr>
-        <td>Dreaming in Pursuit of Memory, 2010</td>
+        <td>Dreaming in Pursuit of Memory, 2010<br />
+          Online Exhibition</td>
       </tr>
       <tr>
-        <td>Exit Show, 2010</td>
+        <td>Exit Show, 2010<br />
+        Statesboro, GA</td>
       </tr>
       <tr>
-        <td>Yomitobi: Paintings, 2009</td>
+        <td>Yomitobi: Paintings, 2009<br />          
+        Statesboro, GA</td>
       </tr>
       <tr>
-        <td height="18">Going Somewhere, 2007</td>
+        <td height="18">Going Somewhere, 2007<br />          
+          Statesboro, GA<br /></td>
       </tr>
       <tr>
-        <td height="18">Small Faces, Up-close, 2006</td>
+        <td height="18">Small Faces, Up-close, 2006<br />
+          Nagoya, Japan         <br /></td>
       </tr>
     </tbody>
   </table>
