--- a/info.html
+++ b/info.html
@@ -89,7 +89,7 @@ a:active {
         <td width="420" rowspan="13"><p>2012 MFA University of Pennsylvania<br />
         2009 BA Georgia Southern University       </p></td>
         <td>Birds, Bees, Flowers, and Trees<br />          
-        2019, RAAC, Richmond, KY<br /></td>
+        2019, RAAC, Richmond, KY</td>
       </tr>
       <tr>
         <td>Jonathan LeVine Delusion Art Competition<br />
@@ -97,7 +97,7 @@ a:active {
       </tr>
       <tr>
         <td>Shape Shifting Liveliness, (solo)<br />          
-          2017, The Center for the Arts, Murfreesboro, TN<br /></td>
+          2017, The Center for the Arts, Murfreesboro, TN</td>
       </tr>
       <tr>
         <td>Antioch Art at the Mall <br />
@@ -106,15 +106,15 @@ a:active {
       </tr>
       <tr>
         <td>Continuum<br />          
-          2012, The CAT, Statesboro, GA<br /></td>
+          2012, The CAT, Statesboro, GA</td>
       </tr>
       <tr>
         <td width="421"> Upenn MFA Thesis Exhibit<br />          
-          2012, The Crane, Philadelphia, PA<br /></td>
+          2012, The Crane, Philadelphia, PA<</td>
       </tr>
       <tr>
         <td>Liquid on Pane, (solo, catalogue)<br />          
-          2011, The Physical Lab, Philadelphia, PA<br /></td>
+          2011, The Physical Lab, Philadelphia, PA</td>
       </tr>
       <tr>
         <td>Call It<br />          
@@ -134,11 +134,11 @@ a:active {
       </tr>
       <tr>
         <td height="18">Going Somewhere, 2007<br />          
-          Statesboro, GA<br /></td>
+          Statesboro, GA</td>
       </tr>
       <tr>
         <td height="18">Small Faces, Up-close, 2006<br />
-          Nagoya, Japan         <br /></td>
+          Nagoya, Japan</td>
       </tr>
     </tbody>
   </table>
