--- a/info.html
+++ b/info.html
@@ -64,14 +64,14 @@ a:active {
       <td width="144"><div align="center"><a href="https://www.youtube.com/user/mikeywinsor"><img src="icon-youtube.png" width="60" height="60" class="icon"/></a></div></td>
       <td width="128"><div align="center"><a href="https://www.instagram.com/mikeywinsor/" target="_new"><img src="icon-instagram.png" width="60" height="60" class="icon" /></a></div></td>
       <td width="128"><div align="center"><a href="https://www.patreon.com/mikeywinsor" target="_new"><img src="icon-patreon.png" width="60" height="60" class="icon" /></a></div></td>
-      <td width="128"><div align="center"><a href="https://www.twitch.tv/mikeywinsor/" target="_new"><img src="icon-twitch.png" width="60" height="60" class="icon" /></a></div></td>
+      <td width="128"><div align="center"><a href="https://www.twitch.tv/key_wins/" target="_new"><img src="icon-twitch.png" width="60" height="60" class="icon" /></a></div></td>
     </tr>
     <tr>
       <td><div align="center">info (@) mikeywinsor . com</div></td>
       <td><div align="center"><font size="-1"><a href="https://www.youtube.com/user/mikeywinsor" target="_new">youtube</a></font></div></td>
       <td><div align="center"><font size="-1"><a href="https://www.instagram.com/mikeywinsor/" target="_new">instagram</a></font></div></td>
       <td><div align="center"><font size="-1"><a href="https://www.patreon.com/mikeywinsor" target="_new">patreon</a></font></div></td>
-      <td><div align="center"><font size="-1"><a href="https://www.twitch.tv/mikeywinsor/" target="_new">twitch</a></font></div></td>
+      <td><div align="center"><font size="-1"><a href="https://www.twitch.tv/key_wins/" target="_new">twitch</a></font></div></td>
     </tr>
   </table>
   <br />
