--- a/info.html
+++ b/info.html
@@ -74,8 +74,24 @@ a:active {
       <td><div align="center"><font size="-1"><a href="https://www.twitch.tv/key_wins/" target="_new">twitch</a></font></div></td>
     </tr>
   </table>
-  <br />
-<br />
+  <p>~ ~ Current and Upcoming Shows ~ ~</p>
+  <p>&nbsp;</p>
+  <p>Bluegrass Transplants<br />
+    <a href="http://www.lexingtonartleague.org/the-loudoun-house.html" target="_new">The Loudon House</a>, Lexington KY<br />
+    Sept 6 - Oct 4<br />
+  Reception: Sept 20</p>
+<p>&nbsp;</p>
+  <p>Kentucky Landscapes<br />
+    <a href="http://www.lexarts.org/participate/programs-services/lexartsgallery/" target="_new">LexArts Gallery</a>, Lexington, KY<br />
+  Sept 12 - Oct 31<br />
+  Reception: Sept 20</p>
+  <p>&nbsp;</p>
+  <p>Third Annual Juried Competition<br />
+    <a href="https://www.center-arts.com/" target="_new">Center for Contemporary Arts</a>, Abilene, TX<br />
+    Sept 13 - Nov 2<br />
+  Reception: Sept 14</p>
+  <p> <br />
+</p>
 </div>
 <div align="center">
   <table width="851" height="376" border="0" cellspacing="4">
@@ -86,8 +102,20 @@ a:active {
         <td>Select Shows and Awards:</td>
       </tr>
       <tr>
-        <td width="420" rowspan="13"><p>2012 MFA University of Pennsylvania<br />
+        <td width="420" rowspan="16"><p>2012 MFA University of Pennsylvania<br />
         2009 BA Georgia Southern University       </p></td>
+        <td>Kentucky Landscape<br />
+          2019, LexArts Gallery, Lexington, KY</td>
+      </tr>
+      <tr>
+        <td> Third Annual Juried Competition<br />
+        2019, Center for Contemporary Arts, Abilene, TX</td>
+      </tr>
+      <tr>
+        <td>Bluegrass Transplants Exhibition<br />
+        2019, The Loudon House, Lexington KY</td>
+      </tr>
+      <tr>
         <td>Birds, Bees, Flowers, and Trees<br />          
         2019, RAAC, Richmond, KY</td>
       </tr>
