--- a/info.html
+++ b/info.html
@@ -58,39 +58,42 @@ a:active {
 
 <body>
 <div align="center">
-  <table width="808" border="0" cellspacing="2" cellpadding="2">
+  <table width="658" border="0" cellspacing="2" cellpadding="2">
     <tr>
       <td width="248"><div align="center"><img src="icon-email.png" width="60" height="60" class="icon" /></div></td>
-      <td width="144"><div align="center"><a href="https://www.youtube.com/user/mikeywinsor"><img src="icon-youtube.png" width="60" height="60" class="icon"/></a></div></td>
       <td width="128"><div align="center"><a href="https://www.instagram.com/mikeywinsor/" target="_new"><img src="icon-instagram.png" width="60" height="60" class="icon" /></a></div></td>
       <td width="128"><div align="center"><a href="https://www.patreon.com/mikeywinsor" target="_new"><img src="icon-patreon.png" width="60" height="60" class="icon" /></a></div></td>
-      <td width="128"><div align="center"><a href="https://www.twitch.tv/key_wins/" target="_new"><img src="icon-twitch.png" width="60" height="60" class="icon" /></a></div></td>
+      <td width="144"><div align="center"><a href="https://www.youtube.com/user/mikeywinsor"><img src="icon-youtube.png" width="60" height="60" class="icon"/></a></div></td>
     </tr>
     <tr>
       <td><div align="center">info (@) mikeywinsor . com</div></td>
-      <td><div align="center"><font size="-1"><a href="https://www.youtube.com/user/mikeywinsor" target="_new">youtube</a></font></div></td>
       <td><div align="center"><font size="-1"><a href="https://www.instagram.com/mikeywinsor/" target="_new">instagram</a></font></div></td>
       <td><div align="center"><font size="-1"><a href="https://www.patreon.com/mikeywinsor" target="_new">patreon</a></font></div></td>
-      <td><div align="center"><font size="-1"><a href="https://www.twitch.tv/key_wins/" target="_new">twitch</a></font></div></td>
+      <td><div align="center"><font size="-1"><a href="https://www.youtube.com/user/mikeywinsor" target="_new">youtube</a></font></div></td>
     </tr>
   </table>
-  <p>~ ~ Current and Upcoming Shows ~ ~</p>
-  <p>&nbsp;</p>
+  <p><strong>~ ~ Current and Upcoming Shows ~ ~</strong></p>
+  <p>PRHBTN<br />
+    <a href="http://www.lexingtonartleague.org/the-loudoun-house.html" target="_new">The Loudon House</a>, Lexington KY<br />
+    Oct 18 - Nov 8<br />
+  Reception: Oct 18</p>
+  <p>
+    Kansas City Zoo Benefit Art Show<br />
+    <a href="https://jonesgallerykc.com/" target="_new">Jones Gallery</a><br />
+    Oct 2 - 24<br />
+  Reception: Oct 3rd</p>
   <p>Bluegrass Transplants<br />
     <a href="http://www.lexingtonartleague.org/the-loudoun-house.html" target="_new">The Loudon House</a>, Lexington KY<br />
     Sept 6 - Oct 4<br />
   Reception: Sept 20</p>
-<p>&nbsp;</p>
   <p>Kentucky Landscapes<br />
     <a href="http://www.lexarts.org/participate/programs-services/lexartsgallery/" target="_new">LexArts Gallery</a>, Lexington, KY<br />
   Sept 12 - Oct 31<br />
   Reception: Sept 20</p>
-  <p>&nbsp;</p>
   <p>Third Annual Juried Competition<br />
     <a href="https://www.center-arts.com/" target="_new">Center for Contemporary Arts</a>, Abilene, TX<br />
     Sept 13 - Nov 2<br />
-  Reception: Sept 14</p>
-  <p> <br />
+  Reception: Sept 14<br />
 </p>
 </div>
 <div align="center">
@@ -102,8 +105,16 @@ a:active {
         <td>Select Shows and Awards:</td>
       </tr>
       <tr>
-        <td width="420" rowspan="16"><p>2012 MFA University of Pennsylvania<br />
+        <td width="420" rowspan="18"><p>2012 MFA University of Pennsylvania<br />
         2009 BA Georgia Southern University       </p></td>
+        <td>PRHBTN<br />
+2019, The Loudon House, Lexington KY</td>
+      </tr>
+      <tr>
+        <td>Kansas City Zoo Benefit Art Show<br />
+        2019, Jones Gallery</td>
+      </tr>
+      <tr>
         <td>Kentucky Landscape<br />
           2019, LexArts Gallery, Lexington, KY</td>
       </tr>
@@ -149,24 +160,24 @@ a:active {
         2011, Charles Addams Gallery, Philadelphia, PA</td>
       </tr>
       <tr>
-        <td>Dreaming in Pursuit of Memory, 2010<br />
-          Online Exhibition</td>
+        <td>Dreaming in Pursuit of Memory<br />
+          2010, Online Exhibition</td>
       </tr>
       <tr>
-        <td>Exit Show, 2010<br />
-        Statesboro, GA</td>
+        <td>Exit Show<br />
+        2010, Statesboro, GA</td>
       </tr>
       <tr>
-        <td>Yomitobi: Paintings, 2009<br />          
-        Statesboro, GA</td>
+        <td>Yomitobi: Paintings<br />          
+        2009, Statesboro, GA</td>
       </tr>
       <tr>
-        <td height="18">Going Somewhere, 2007<br />          
-          Statesboro, GA</td>
+        <td height="18">Going Somewhere<br />          
+          2007, Statesboro, GA</td>
       </tr>
       <tr>
-        <td height="18">Small Faces, Up-close, 2006<br />
-          Nagoya, Japan</td>
+        <td height="18">Small Faces, Up-close<br />
+          2006, Nagoya, Japan</td>
       </tr>
     </tbody>
   </table>
