--- a/mobile.html
+++ b/mobile.html
@@ -6,7 +6,7 @@
 <title>MIKEY WINSOR</title>
 <style type="text/css">
 body {
-	background-color:#E9E9E9;
+	background-color:#FFF;
 }
 body,td,th {
 	color: #666666;
