--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body,td,th {
 #navi {
 	position: fixed;
 	bottom:20px;
-	left:300px;
+	left:20px;
 	border-width:medium;
 	width:200px;
 	height:70px;
@@ -64,9 +64,9 @@ h1 {color:#FFF;}
 #PV {
 	position:absolute;
 	width: 700px;
-	height: 600px;
+	height: 70%;
 	left: 300px;
-	top: 120px;
+	top: 104px;
 	z-index:2;
 	text-align:center;
 	visibility: visible;
