--- a/info.html
+++ b/info.html
@@ -76,16 +76,7 @@ a:active {
   <p>PRHBTN<br />
     <a href="http://www.lexingtonartleague.org/the-loudoun-house.html" target="_new">The Loudon House</a>, Lexington KY<br />
     Oct 18 - Nov 8<br />
-  Reception: Oct 18</p>
-  <p>
-    Kansas City Zoo Benefit Art Show<br />
-    <a href="https://jonesgallerykc.com/" target="_new">Jones Gallery</a><br />
-    Oct 2 - 24<br />
-  Reception: Oct 3rd  </p>
-  <p>Kentucky Landscapes<br />
-    <a href="http://www.lexarts.org/participate/programs-services/lexartsgallery/" target="_new">LexArts Gallery</a>, Lexington, KY<br />
-  Sept 12 - Oct 31<br />
-  Reception: Sept 20</p>
+  Reception: Oct 18  </p>
   <p>Third Annual Juried Competition<br />
     <a href="https://www.center-arts.com/" target="_new">Center for Contemporary Arts</a>, Abilene, TX<br />
     Sept 13 - Nov 2<br />
@@ -111,7 +102,7 @@ a:active {
         2019, Jones Gallery</td>
       </tr>
       <tr>
-        <td>Kentucky Landscape<br />
+        <td>What We Inhabit<br />
           2019, LexArts Gallery, Lexington, KY</td>
       </tr>
       <tr>
