--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body,td,th {
 	left:0px;
 	width:100%;
 	height:68px;
-	z-index:1;
+	z-index:5;
 	background: rgba(255,255,255,.8);}
 #frame {
 	position:fixed;
@@ -72,7 +72,7 @@ h1 {color:#FFF;}
 	visibility: visible;
 }
 #about {
-	position: absolute;
+	position: fixed;
 	top:250px;
 	left:20px;
 	width:280px;
@@ -103,7 +103,7 @@ if (typeof window.orientation !== 'undefined') {window.location.href = "mobile.h
 <div id="PV"></div>
 <body onload="pageload()">
 <p>&nbsp;</p>
-<div id="navi"><a href="#" onclick="pr();"><img src="arrow-left.png" width="60" height="60" class="h"/></a> <img src="empty-60.png" width="60" height="60" /> <a href="#" onclick="nx();"><img src="arrow-right.png" width="60" height="60" class="h"/></a></div>
+<div id="navi"><a href="#" onclick="pr();"><img src="arrow-left.png" width="60" height="60" class="h"/></a> <a href="#" onclick="showThumbs();"><img src="thumb.png" width="60" height="60" /></a> <a href="#" onclick="nx();"><img src="arrow-right.png" width="60" height="60" class="h"/></a></div>
 <div id="top">
   <table width="508" border="0" cellspacing="4" cellpadding="0">
     <tr>
