--- a/mobile.html
+++ b/mobile.html
@@ -117,7 +117,7 @@ h1 {color:#FFF;}
 <div id="PV" align="center"></div>
 <body onload="pageload()">
 <p>&nbsp;</p>
-<div id="navi"><a href="#" onclick="pr();"><img src="arrow-left.png" width="60" height="60" class="h"/></a><a href="#" onclick="showThumbs();"> <img src="thumb.png" width="60" height="60" /> </a><a href="#" onclick="nx();"><img src="arrow-right.png" width="60" height="60" class="h"/></a></div>
+<div id="navi"><a href="#" onclick="pr();"><img src="arrow-left.png" width="60" height="60" class="h"/></a><a href="#" onclick="mobileThumbs();"> <img src="thumb.png" width="60" height="60" /> </a><a href="#" onclick="nx();"><img src="arrow-right.png" width="60" height="60" class="h"/></a></div>
 <div id="topfx2">
 </div>
 <div id="topfx1">
