--- a/info.html
+++ b/info.html
@@ -72,7 +72,14 @@ a:active {
       <td><div align="center"><font size="-1"><a href="https://www.youtube.com/user/mikeywinsor" target="_new">youtube</a></font></div></td>
     </tr>
   </table>
-  <p><br />
+  <p>Upcoming Shows:</p>
+  <p>The Chautauqua National Juried Exhibition: Balance and Resilience<br />
+    Giles Gallery
+      <br />
+      Eastern Kentucky University
+    <br />
+    ~~  Jan 21-Feb14 ~~<br />
+~~ Reception Jan 23, 5-7pm ~~<br />
   </p>
 </div>
 <div align="center">
@@ -84,10 +91,14 @@ a:active {
         <td>Select Shows and Awards:</td>
       </tr>
       <tr>
-        <td width="420" rowspan="18"><p>2012 MFA University of Pennsylvania<br />
+        <td width="420" rowspan="19"><p>2012 MFA University of Pennsylvania<br />
         2009 BA Georgia Southern University       </p></td>
+        <td>Balance and Resilience<br />
+2020, Giles Gallery, EKU, Richmond KY</td>
+      </tr>
+      <tr>
         <td>PRHBTN<br />
-2019, The Loudon House, Lexington KY</td>
+        2019, The Loudon House, Lexington KY</td>
       </tr>
       <tr>
         <td>Kansas City Zoo Benefit Art Show<br />
