--- a/list/checklistmobile.html
+++ b/list/checklistmobile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checklist Mobile</title>
-    <link rel="shortcut icon" href="img/icn.ico">
+    <link rel="shortcut icon" href="icon.ico">
     <style>
         body,
         td,
@@ -18,7 +18,7 @@
         .grid-container {
             display: grid;
             background-color: whitesmoke;
-            padding: 10px;
+            padding: 3px;
 
         }
 
@@ -69,7 +69,7 @@
             grid-row: 7;
             text-align: center;
             background-color: silver;
-            padding: 40px;
+            padding: 20px;
         }
     </style>
 </head>
