--- a/list/checklistmobile.html
+++ b/list/checklistmobile.html
@@ -54,6 +54,11 @@
             grid-row: 5;
         }
 
+        input,
+        select {
+            font-size: 100%;
+        }
+
         .checklistItem {
             grid-row: 6;
             background-color: rgb(167, 190, 190);
