--- a/list/list_m.html
+++ b/list/list_m.html
@@ -30,7 +30,7 @@
         .header {
             grid-row: 1;
             text-align: center;
-            font-size: 36px;
+            font-size: 30px;
         }
 
         .login {
@@ -49,7 +49,7 @@
 
         .addBar {
             display: none;
-            padding: 20px;
+            padding: 16px;
             background-color: beige;
             grid-row: 4;
             align-content: center;
@@ -63,10 +63,11 @@
             display: inline;
             font-size: 28px;
             align-content: center;
-            padding: 8px;
+            padding: 6px;
             display: block;
             white-space: nowrap;
             text-align: center;
+
         }
 
         .logout {
@@ -123,7 +124,7 @@
             <input type="password" size='25' placeholder="password" id="passField">
             </br>
             <button id='loginButton'>Login</button></div>
-        <div class='addBar' id='addBlock'><input id='itemInput' type="text" size='20' placeholder="add an item"
+        <div class='addBar' id='addBlock'><input id='itemInput' type="text" size='17' placeholder="add an item"
                 style="background-color:oldlace; border:6px; border-style:solid; border-color:powderblue">
             </input><img src="plus.png" id="addButton">
         </div>
@@ -132,7 +133,7 @@
     <div class='logout' id='logout'>
         <div id='logoutButton' style=`float: right;
             style='background-color: lightsteelblue; border:6px; border-style:solid; border-color:darkgray' `></div>
-        <div class="footer">(c) mikey winsor</div>
+        <div class="footer">© mikey winsor</div>
     </div>
     <button id='devTest'>DevButton</button>
     <button id='devTestTwo'>Dev 2 Button</button>
