--- a/list/list_m.html
+++ b/list/list_m.html
@@ -112,7 +112,9 @@
 
 <body>
     <div class='grid-container'>
-        <div class='header'>Checklist</div>
+        <div class='header' style="display: inline;">Checklist</div>
+        <div class='header' style="display: inline; text-align: right;"><img onclick="funMoneyClick()" src='fun.png'>
+        </div>
         <img src='undo.png' id='undo' style='border:6px; border-style:solid; border-color:white; display: none;'
             onclick="undoDelete()">
         <div id='undoText'></div>
